[package]
name = "restaurant"
version = "0.1.0"
authors = ["Test"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
serde = "1.0.98"
serde_json = "1.0.40"

#
#[dependencies.mysql]
#version = "*"
#features = ["ssl"]
